## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	$(PACKAGE_CFLAGS)\
	 -I/Projects/DP/include

AM_CFLAGS =\
	 -Wall\
	 -g

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = digitalparent

digitalparent_SOURCES = \
	digitalparent.cc\
	login_dlg.cc\
	login_dlg_glade.cc\
	media_player_dlg.cc\
	media_player_dlg_glade.cc\
	psswrd_prompt_dlg.cc\
	psswrd_prompt_dlg_glade.cc\
	controller.cc\
	data_structure.cc\
	database.cc

digitalparent_LDFLAGS = 

digitalparent_LDADD = \
	$(PACKAGE_LIBS)\
	 /usr/lib/libtntdb.la

