## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	$(PACKAGE_CFLAGS)\
	 -I/Projects/DP/include

AM_CFLAGS =\
	 -Wall\
	 -g

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = digitalparent

digitalparent_SOURCES = \
	digitalparent.cc\
	login_dlg.cc\
	login_dlg_glade.cc\
	media_player_dlg.cc\
	media_player_dlg_glade.cc\
	controller.cc\
	data_structure.cc\
	database.cc\
	welcome_dlg.cc\
	welcome_dlg_glade.cc\
	playlist_dlg.cc\
	playlist_dlg_glade.cc\
	media_chooser_dlg.cc\
	media_chooser_dlg_glade.cc\
	login_dlg.hh\
	login_dlg_glade.hh\
	media_chooser_dlg.hh\
	media_chooser_dlg_glade.hh\
	media_player_dlg.hh\
	media_player_dlg_glade.hh\
	playlist_dlg.hh\
	playlist_dlg_glade.hh\
	welcome_dlg.hh\
	welcome_dlg_glade.hh

digitalparent_LDFLAGS = 

digitalparent_LDADD = \
	$(PACKAGE_LIBS)\
	 /usr/lib/libtntdb.la -lvlc

