## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

digitalparent_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/@PACKAGE@

digitalparent_data_DATA = \
	atomic.png\
	big_smile.png\
	black_bomb.png\
	blue_flower.png\
	butterfly.png\
	eye.png\
	foxy_smile.png\
	full_matrix.png\
	hazard.jpg\
	matrix_smile.png\
	misdoubt_smile.png\
	oogabada.png\
	oooh_smile.png\
	pirate.png\
	polypheme_smile.png\
	roswell_smile.png\
	smile.png\
	splash.png\
	sun.png\
	tired_smile.png\
	truck.png\
	tux.png\
	watcha_smile.png\
	weird.png\
	what.png\
	yelling.png

EXTRA_DIST = $(digitalparent_data_DATA)
