## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

digitalparent_includedir = $(pkgincludedir)

digitalparent_include_DATA = \
	login_dlg.hh\
	login_dlg_glade.hh\
	media_player_dlg.hh\
	media_player_dlg_glade.hh\
	psswrd_prompt_dlg.hh\
	psswrd_prompt_dlg_glade.hh\
	controller.h\
	data_structure.h\
	database.h

EXTRA_DIST = $(digitalparent_include_DATA)
