## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

digitalparent_includedir = $(pkgincludedir)

digitalparent_include_DATA = \
	controller.h\
	data_structure.h\
	database.h\
	dp_gui.h\
	std_errors.h

EXTRA_DIST = $(digitalparent_include_DATA)
